Fixed mobile responsiveness issues and removed horizontal scroll

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -166,8 +166,10 @@
 @media (max-width: 767px) {
   * {
     box-sizing: border-box;
+   
+    outline: 1px solid red;
   }
-body{
+html,body{
   overflow-x: hidden;
 }
   .navitem {
@@ -253,7 +255,7 @@ body{
     height: 40px;
   }
   .about_desc {
-    width: 400px;
+    width: 100%;
   }
   .skill_logo {
     flex-direction: column;
@@ -264,7 +266,7 @@ body{
     scroll-margin-top: 120px;
   }
   .skill_description {
-    width: 400px;
+    width: 100%;
   }
 
   .project_description {
@@ -314,6 +316,7 @@ body{
   .contactpage {
     padding-left: 20px;
     padding-right: 20px;
+    width:100%;
   }
   .contact {
     margin-right: 30px;
